--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -131,6 +131,7 @@ javac.classpath=\
     ${file.reference.mgf-parser-1.2.2.jar}:\
     ${file.reference.ms2-parser-1.2.1.jar}:\
     ${file.reference.mzdata-parser-1.2.1.jar}:\
+    ${file.reference.mzidentml-lib.jar}:\
     ${file.reference.mzml-wrapper-1.1.jar}:\
     ${file.reference.mzxml-parser-1.3.2.jar}:\
     ${file.reference.omssa-parser-1.4.jar}:\
@@ -152,15 +153,14 @@ javac.classpath=\
     ${file.reference.xml-apis-1.3.04.jar}:\
     ${file.reference.xpp3-1.1.3.4-RC3.jar}:\
     ${file.reference.xtandem-parser-1.2.4.jar}:\
-    ${file.reference.xxindex-0.11.jar}:\
-    ${file.reference.mzidentml-lib.jar}
+    ${file.reference.xxindex-0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -192,7 +192,7 @@ main.class=uk.ac.liv.proteoidviewer.ProteoIDViewer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.6
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
