--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ file.reference.logback-classic-0.9.24.jar=lib/logback-classic-0.9.24.jar
 file.reference.logback-core-0.9.24.jar=lib/logback-core-0.9.24.jar
 file.reference.looks-2.2.2.jar=lib/looks-2.2.2.jar
 file.reference.mascotdatfile-3.2.2.jar=lib/mascotdatfile-3.2.2.jar
-file.reference.mgf-parser-1.2.2.jar=lib/mgf-parser-1.2.2.jar
+file.reference.mgf-parser-1.3.5-SNAPSHOT.jar=lib/mgf-parser-1.3.5-SNAPSHOT.jar
 file.reference.ms2-parser-1.2.1.jar=lib/ms2-parser-1.2.1.jar
 file.reference.mzdata-parser-1.2.1.jar=lib/mzdata-parser-1.2.1.jar
 file.reference.mzidentml-lib.jar=lib\\mzidentml-lib.jar
@@ -128,8 +128,8 @@ javac.classpath=\
     ${file.reference.logback-core-0.9.24.jar}:\
     ${file.reference.looks-2.2.2.jar}:\
     ${file.reference.mascotdatfile-3.2.2.jar}:\
-    ${file.reference.mgf-parser-1.2.2.jar}:\
     ${file.reference.ms2-parser-1.2.1.jar}:\
+    ${file.reference.mgf-parser-1.3.5-SNAPSHOT.jar}:\
     ${file.reference.mzdata-parser-1.2.1.jar}:\
     ${file.reference.mzidentml-lib.jar}:\
     ${file.reference.mzml-wrapper-1.1.jar}:\
